--- a/k8sapps/autogen.yaml
+++ b/k8sapps/autogen.yaml
@@ -1,6 +1,7 @@
 apiVersion: v1
 kind: Pod
 metadata:
+  namespace: kube-public # namespace info 
   creationTimestamp: null
   labels:
     run: ashupodx1
